--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="conteiner">
-        <img class="img1" src="фото/Новий проєкт (1).jpg" alt="" width="120px">
+        <img class="img1" src="img/Новий проєкт (1).jpg" alt="" width="120px">
         <p class="Dragon">Dragon</p>
         <button class="button1">menu</button>
         <button class="button2">cities</button>
@@ -17,7 +17,7 @@
     </div>
     <div class="cont">
         <p class="romy">Чому саме ми</p>
-        <img class="rare" src="фото/aaa.png" alt="" width="212px" height="73px">
+        <img class="rare" src="img/aaa.png" alt="" width="212px" height="73px">
     </div>
     <div class="yellow">
         <div class="cont">
@@ -32,9 +32,9 @@
 
     <div class="black">
         <div class="nt">
-<img class="img4" src="фото/торт.png" alt="" width="190px" height="278px">
-<img class="img5" src="фото/кава.png" alt=""width="190px" height="278px">
-<img class="img6" src="фото/атмосфера.png" alt=""width="190px" height="278px">
+<img class="img4" src="img/торт.png" alt="" width="190px" height="278px">
+<img class="img5" src="img/кава.png" alt=""width="190px" height="278px">
+<img class="img6" src="img/атмосфера.png" alt=""width="190px" height="278px">
         </div>
         <div class="co">
 <p class="p1">Смачна їжа</p>
@@ -46,18 +46,18 @@
     <button class="but">переглянути меню</button>
 
     <div class="c">
-        <img class="img7" src="фото/естетика 1.png" alt="">
+        <img class="img7" src="img/естетика 1.png" alt="">
         <p class="p4">затишна 
 атмосфера</p>
-        <img class="img8" src="фото/естетика 2.png" alt="">
+        <img class="img8" src="img/естетика 2.png" alt="">
     </div>
     <div>
         <div class="ada">
-        <img src="фото/кухня 1.png" alt="">
+        <img src="img/кухня 1.png" alt="">
         <div class="ck">
         <p class="pa">КУХНЯ-</p>
         </div>
-        <img src="фото/сердечко.png" alt="" width="150px" height="150px">
+        <img src="img/сердечко.png" alt="" width="150px" height="150px">
         </div>
     <div class="aba">
         <div class="ro">
@@ -66,18 +66,18 @@
 тільки 
 найкращі   </p>
         </div>
-        <img class="img30" src="фото/кухня 2.png" alt="">
+        <img class="img30" src="img/кухня 2.png" alt="">
         </div>
     </div>
      <div class="cont">
         <p class="p43">Акції</p>
-        <img class="oo" src="фото/!!.png" alt="" height="100px" width="80px">
+        <img class="oo" src="img/!!.png" alt="" height="100px" width="80px">
      </div>
 
     
      
      <div class="re">
-        <img class="im" src="фото/знижка 11.png" alt=""width="100%">
+        <img class="im" src="img/знижка 11.png" alt=""width="100%">
         <p class="tex">До дня народження!</p>
         <h1 class="textee">-20%</h1>
         <p class="textt">Святкуйте день народження разом 
@@ -85,7 +85,7 @@
  </div>
 
  <div class="er">
-        <img class="im" src="фото/знижка 2.png" alt=""width="100%">
+        <img class="im" src="img/знижка 2.png" alt=""width="100%">
         <p class="texx">Щасливий Понеділок</p>
         <h1 class="tee">1=2</h1>
         <p class="ttt">Кожного понеділка 2 круасани 
@@ -93,7 +93,7 @@
  </div>
 
      <div class="ret">
-        <img class="im" src="фото/знижка 3.png" alt=""width="100%">
+        <img class="im" src="img/знижка 3.png" alt=""width="100%">
         <h1 class="texte">Різдвяне меню</h1>
         <p class="text">Різдво вже близько тож ми вирішили додати нове,
 смачне,святкове меню смак якого всім давно відомий-Різдвяне 
@@ -102,7 +102,7 @@
 
     </div>
     <div class="ok">
-        <img src="фото/yh.png" alt="" width="100%">
+        <img src="img/yh.png" alt="" width="100%">
         <div class="cpot">
             <p class="popm">Івано-Франківськ:
 вул.Незалежності 45</p>
